# postr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md  branch-ruleset.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: doctor.rs  lib.rs  main.rs
cli/src/api/: agent.rs  ai.rs  client.rs  mailbox.rs  me.rs  mod.rs  types.rs
cli/src/config/: keyring.rs  mod.rs
cli/src/state/: mod.rs
cli/src/tui/: ai.rs  app.rs  body.rs  command.rs  compose.rs  mod.rs  render.rs  theme.rs
worker/: Cargo.toml  wrangler.jsonc
worker/.cargo/: config.toml
worker/migrations/: 0001_schema.sql
worker/scripts/: install-wasm-bindgen-shim.sh  wasm-bindgen-shim.sh
worker/src/: auth.rs  do_mailbox.rs  inbound.rs  lib.rs  mailbox.rs  types.rs
worker/src/routes/: ai.rs  cli.rs  cron.rs  drafts.rs  emails.rs  mime.rs  mod.rs  send.rs  threads.rs
worker/tools/: install.sh
