[package]
name = "postr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eventsource-stream = "0.2"
futures-util = "0.3"
directories = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
html2text = "0.13"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"
rpassword = "7"
toml = "0.8"
tui-textarea = "0.7"
textwrap = "0.16"
